--- a/README
+++ b/README
@@ -2,23 +2,22 @@
 
 ABOUT
 
-	This repository contains an enhanced implementation of LibGOMP, which
-	features the following extras:
+	This repository contains an enhanced implementation of LibGOMP,
+	which features the following extras:
 	
-        * The Smart Round-Robin (SRR) loop scheduler
+		* The Smart Round-Robin (SRR) loop scheduler
 
-		* The Bin Packing Logest Processing Time First (BIN+LPT) loop
-		  scheduler
+		* The Bin Packing LPT (BinLPT) loop scheduler
 
 BUILDING
 
-	To build LaPeSD LibGOMP execut the following commands in the root
+	To build LaPeSD LibGOMP execute the following commands in the root
 	directory of the project:
 	
-		$ make # Build LaPESD LibGOMP
+		$ make
 
 LICENSE AND MAINTAINERS
 
-	This is an open source software that is under GPLV3 license and is
-	maintained by Pedro H. Penna. Any questions or suggestions send an
-	email to him: <pedrohenriquepenna@gmail.com>.
+	This is an open source software that is under GPLv3 license and is
+	maintained by Pedro H. Penna. Any questions or suggestions send him
+	an email: <pedrohenriquepenna@gmail.com>.
